Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129767

Axis titleColor doesn't follow theming

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.2, 6.9.0 FF
    • 6.8
    • Graphs: 2D
    • None
    • 963f2603a (dev), 53c9a25a4 (6.8)

      With dark theming the text is black by default, so it's hard to see.

      Axis labels do not follow theme text colors either, they have to be set explicitly.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tokorpip Tomi Korpipää
            tuliniemi Jere Tuliniemi
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes