Make axis titles follow theme colors

Fixes: QTBUG-129767
Change-Id: I08c7c49f6ffabac58c26deb95e52f1bf2834673b
Reviewed-by: Kwanghyo Park <kwanghyo.park@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Owais Akhtar <owais.akhtar@qt.io>
(cherry picked from commit 963f2603acf0364ec865a5ba3193a2c8795f1dbf)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>